2012-04-22  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	Fix hurd build.

	* grub-core/kern/emu/hostdisk.c (grub_util_get_fd_size) [__GNU__]: Do
	not define nr variable.

2012-04-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix kfreebsd compile and behaviour.

	* grub-core/kern/emu/hostdisk.c (grub_util_follow_gpart_up): Fix
	format-security.
	* util/getroot.c: Fix wait.h include.
	(grub_guess_root_devices): Error if grub_find_device fails.
	(grub_util_get_geom_abstraction): Fix shadowing and format-security.
	(grub_util_get_dev_abstraction): Likewise.
	(grub_util_pull_device): Likewise.
	(grub_util_get_grub_dev): Likewise.
	* util/lvm.c (grub_util_lvm_isvolume): Likewise.

2012-04-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix and unify wholedisk detection.

	* util/getroot.c (convert_system_partition_to_system_disk): New argument
	is_part. All users updated.
	(device_is_wholedisk): Removed.
	(grub_util_biosdisk_get_grub_dev): Use is_part.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_write): Fix opening
	mode.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump to beta4.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/search_wrap.c (grub_cmd_search): Handle old
	--fs-uuid --set UUID syntax.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_write): Fix message
	disunification.

2012-04-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.common (LDFLAGS_PLATFORM): Use explicit -Wl.

2012-04-18  Mads Kiilerich <mads@kiilerich.com>

         * grub-mkconfig_lib.in: Ignore *.rpmnew and *.rpmsave.

2012-04-18  Mike Gilbert  <floppym@gentoo.org>

	* util/grub.d/10_linux.in: Fix detection of genkernel initramfs.

2012-04-18  Bean  <bean123ch@gmail.com>

	* grub-core/disk/ata.c (grub_ata_strncpy): Put terminating zero at right
	place.
